...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SearchView
            android:id="@+id/sv_photo_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_large"
            android:layout_marginTop="@dimen/space_large"
            android:layout_marginBottom="@dimen/space_medium"
            android:hint="@string/explore_photo"
...
