...
                <LinearLayout
                    android:id="@+id/ll_profile_box"
                    style="@style/FieldBox"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_profile_image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_margin="@dimen/space_medium"
                        android:background="#cfcfcf"
                        android:contentDescription="@string/profile_image"
                        tools:src="@drawable/ic_person" />
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        tools:text="@tools:sample/full_names" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        tools:text="@tools:sample/full_names" />

                    <LinearLayout
...
