<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:foregroundGravity="center"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/ll_photo_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_photo_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:foregroundGravity="center"
                android:src="@drawable/ic_broken_image"
                tools:src="@tools:sample/avatars" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>